# procedural-llms

./: .gitignore  .readthedocs.yaml  README.md  example_run.py  pyproject.toml  setup.cfg
docs/: Makefile  api.rst  api_core.rst  conf.py  index.rst  make.bat  notebook_demo.ipynb  requirements.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/examples/: index.md
docs/source/: api.rst  api_core.rst  api_procedures.rst  index.rst  notebook_demo.ipynb  quickstart.md
docs/source/_static/: custom.css
docs/user_guide/: ga_tips.md  global_state.md  index.md
functions/: procedure_generation.py  query.py  run_steps.py
projects/core/: README.md  pyproject.toml
projects/core/src/llm_procedure_generation_ga/: ga_scaffold_structured.py  scorers.py  validators.py
projects/core/tests/: test_ga_scaffold_structured.py  test_scorers.py  test_validators.py
projects/procedures/: README.md  pyproject.toml
projects/procedures/src/procedures/: builders.py  ollama.py  pipelines.py  prompts.py  repairs.py  runners.py
projects/procedures/src/procedures/examples/: notebook_demo.ipynb
src/: ga_scaffold_structured.py  helpers.py  prompts.py  scorers.py  scoring_structural.py  validators.py
src/llm_procedure_generation_ga/: ga_scaffold_structured.py  procedure_classes.py  scorers.py  validators.py
src/old_modules/: answer_schemas.py  procedure_ga.py  procedure_generation.py  query.py  run_steps.py
src/procedure_generation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_ga_scaffold_structured.py  test_scorers.py  test_validators.py
(+29 files in other folders)
