[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-procedure-generation-ga"
version = "0.1.0"
description = "Lightweight GA scaffold for optimizing LLM-generated procedures"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Malia Barker" }]
dependencies = []   # keep core zero/heavy-deps

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]
docs = ["sphinx>=7", "sphinx-rtd-theme", "myst-parser", "sphinx-autodoc-typehints", "sphinx-copybutton"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "testing*"]
